--- a/app/src/main/res/xml/mixer_preferences.xml
+++ b/app/src/main/res/xml/mixer_preferences.xml
@@ -78,10 +78,18 @@
         <PreferenceCategory/>
 
         <!--Сохранить-->
-        <Preference
-            app:icon="@android:drawable/ic_menu_save"
-            app:key="saveBtn"
-            app:title="Записать в PLC" />
+        <PreferenceCategory
+            app:key="saveCategory">
+            <Preference
+                app:icon="@android:drawable/ic_menu_save"
+                app:key="saveBtn"
+                app:title="Записать в PLC" />
+        </PreferenceCategory>
+
+        <PreferenceCategory
+            android:key="pref_key_loading">
+            <Preference android:widgetLayout="@layout/preference_loading_placeholder" />
+        </PreferenceCategory>
 
     </PreferenceCategory>
 
