- Добавлена проверка лицензии при подключении на прямую к ПЛК. - В настройках добавлен вывод мак адреса по ip - Изменено изображение смесителя с высоким разрешением. - Добавлено сохранение текущего рецепта/заказа в БД таблицы current.

--- a/app/src/main/res/layout/factory_view.xml
+++ b/app/src/main/res/layout/factory_view.xml
@@ -1847,6 +1847,7 @@
                         android:layout_width="206dp"
                         android:layout_height="180dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginBottom="16dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -1854,9 +1855,10 @@
 
                     <ImageView
                         android:id="@+id/mixFully"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="206dp"
+                        android:layout_height="180dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginBottom="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -1869,7 +1871,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="18dp"
                         android:layout_marginStart="2dp"
-                        android:layout_marginTop="33dp"
+                        android:layout_marginTop="16dp"
                         android:text="Сила тока"
                         android:textAlignment="inherit"
                         android:textColor="#000000"
