--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                     android:text="АВТОРИЗАЦИЯ"
                     android:textSize="24sp" />
 
-                <EditText
+                <Spinner
                     android:id="@+id/loginField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -54,9 +54,8 @@
                     android:textSize="24sp"
                     android:ems="10"
                     android:hint="Логин"
-                    android:inputType="textPersonName"
-                    android:minHeight="48dp"
-                    android:text="operator" />
+                    android:spinnerMode="dropdown"
+                    android:minHeight="48dp" />
 
                 <EditText
                     android:id="@+id/passwdField"
@@ -64,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="24sp"
+                    android:paddingStart="10dp"
                     android:ems="10"
                     android:hint="Пароль"
                     android:inputType="textPassword"
@@ -74,16 +74,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="24sp"
-                    android:text="Запомнить" />
+                    android:text="Запомнить"
+                    android:textSize="18sp" />
 
                 <Spinner
                     android:id="@+id/connectType"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:entries="@array/connect_type"
-                    android:spinnerMode="dialog"
-                    >
+                    android:spinnerMode="dialog">
                 </Spinner>
 
                 <Button
@@ -108,5 +107,43 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/progress_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#8C676767"
+        android:visibility="invisible">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ProgressBar
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center" />
+
+                <TextView
+                    android:id="@+id/text_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Подключение..."
+                    android:textColor="@color/white" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
