--- a/app/src/main/res/layout/organization_activity.xml
+++ b/app/src/main/res/layout/organization_activity.xml
@@ -214,7 +214,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:inputType="textMultiLine"
+                    android:inputType="textPersonName"
                     android:text="0" />
             </LinearLayout>
 
