--- a/app/src/main/res/layout/transporters_activity.xml
+++ b/app/src/main/res/layout/transporters_activity.xml
@@ -211,7 +211,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:inputType="textMultiLine"
+                    android:inputType="textPersonName"
                     android:text="Новая марка" />
             </LinearLayout>
 
