--- a/app/src/main/res/menu/popup_select_rec_ord.xml
+++ b/app/src/main/res/menu/popup_select_rec_ord.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/recipe"
+        android:id="@+id/recepie"
         android:title="Рецепт" />
 
     <item
