--- a/app/src/main/res/xml/dk_preferences.xml
+++ b/app/src/main/res/xml/dk_preferences.xml
@@ -59,6 +59,10 @@
             app:key="time_belt_pause_dk"
             app:title="Время останова ленты ДК, сек"
             app:useSimpleSummaryProvider="true" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="reverse_conveyor"
+            android:title="Кнопка реверс конвейера ДК" />
 
     </PreferenceCategory>
 
