--- a/app/src/main/res/layout/activity_factory_config.xml
+++ b/app/src/main/res/layout/activity_factory_config.xml
@@ -15,7 +15,7 @@
         app:backgroundTint="#6FCD6C"
         app:layout_constraintBottom_toTopOf="@+id/tabLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ok" />
+        app:srcCompat="@drawable/back_78x8sppe7e90" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -65,7 +65,7 @@
             android:id="@+id/tabItem4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="скип/лента" />
+            android:text="Cкип/Лента" />
 
     </com.google.android.material.tabs.TabLayout>
 
