--- a/app/src/main/res/layout/dialog_filter.xml
+++ b/app/src/main/res/layout/dialog_filter.xml
@@ -32,9 +32,9 @@
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_weight="1"
-                android:text="Окончание периода" />
+                android:gravity="center"
+                android:text="Конец периода" />
         </LinearLayout>
 
         <LinearLayout
