--- a/app/src/main/res/layout/activity_ftp_server.xml
+++ b/app/src/main/res/layout/activity_ftp_server.xml
@@ -57,17 +57,30 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp" />
 
-        <Button
-            android:id="@+id/btn_start_server"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/run_ftp_server" />
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_stop_server"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/stop_ftp_server" />
+            <Button
+                android:id="@+id/btn_start_server"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/run_ftp_server" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btn_stop_server"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/stop_ftp_server" />
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
