--- a/app/src/main/res/layout/recepie_activity.xml
+++ b/app/src/main/res/layout/recepie_activity.xml
@@ -96,7 +96,7 @@
                     android:textAlignment="textEnd" />
 
                 <EditText
-                    android:id="@+id/typeOrganizationField"
+                    android:id="@+id/dateCreateField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -275,7 +275,7 @@
 
                     <TextView
                         android:id="@+id/weightColumnTitle"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Вес" />
