--- a/app/src/main/res/layout/requisites_activity.xml
+++ b/app/src/main/res/layout/requisites_activity.xml
@@ -46,7 +46,7 @@
                     android:text="Тип организации:" />
 
                 <EditText
-                    android:id="@+id/typeOrganizationField"
+                    android:id="@+id/dateCreateField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
