--- a/app/src/main/res/layout/transporters_activity.xml
+++ b/app/src/main/res/layout/transporters_activity.xml
@@ -124,12 +124,12 @@
                     android:textAlignment="textEnd" />
 
                 <EditText
-                    android:id="@+id/typeOrganizationField"
+                    android:id="@+id/dateCreateField"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:inputType="date"
-                    android:text="01.01.22" />
+                    android:focusable="false"
+                    android:inputType="date" />
             </LinearLayout>
 
             <LinearLayout
